--- a/mapindex.html
+++ b/mapindex.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
@@ -336,6 +336,25 @@
             document.addEventListener('mousemove', function (e) {
                 if (currentArea) {
                     updateTooltipPosition(e);
+                }
+            });
+        });
+        document.addEventListener('DOMContentLoaded', function () {
+            // --- 你的原本地圖互動程式碼 ---
+            // (保留原有 map/area 操作代碼)
+
+            // ===== 手機選單切換 =====
+            const menuToggle = document.getElementById('menu-toggle');
+            const menu = document.getElementById('menu');
+
+            menuToggle.addEventListener('click', function () {
+                menu.classList.toggle('active');
+            });
+
+            // 點擊選單外部自動關閉（可選）
+            document.addEventListener('click', function (e) {
+                if (!menu.contains(e.target) && !menuToggle.contains(e.target)) {
+                    menu.classList.remove('active');
                 }
             });
         });
