--- a/mapindex.html
+++ b/mapindex.html
@@ -9,7 +9,7 @@
 <body>
     <!-- 導覽列 -->
     <nav class="navbar">
-        <a href="main.html" class="brand">園區導覽</a>
+        <a href="mapindex.html" class="brand">園區導覽</a>
         <div class="menu" id="menu">
             <a href="main.html">首頁</a>
             <a href="index.html">互動體驗</a>
@@ -361,3 +361,4 @@
     </script>
 </body>
 </html>
+
